--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
                     note that the leading "/" is required for android:path
                 -->
                 <data
-                    android:host="com.azuresamples.msalandroidapp"
-                    android:path="/1wIqXSqBj7w+h11ZifsnqwgyKrY="
+                    android:host="com.demdaco.leanlaps"
+                    android:path="/w5G662mc4o81BUzLaFO2xjZlnHw="
                     android:scheme="msauth" />
             </intent-filter>
         </activity>
